Data visualization added

--- a/src/sass/page-specific/_recipe_content.scss
+++ b/src/sass/page-specific/_recipe_content.scss
@@ -242,7 +242,7 @@
           .dummy {
             width: 100%;
             height: 300px;
-            background-color: steelblue;
+            // background-color: steelblue;
           }
         }
       }
