--- a/src/sass/page-specific/_recipeFilterSearch.scss
+++ b/src/sass/page-specific/_recipeFilterSearch.scss
@@ -16,7 +16,8 @@
       gap: 1.5rem;
 
 			@media screen and (max-width: 700px) {
-				grid-template-columns: repeat(1, 1fr);
+				display: flex;
+    		overflow: auto;
 			}
 
       button.category-listing {
@@ -27,6 +28,11 @@
         margin: 0;
         padding: 1rem 1rem 0.5rem 1rem;
         transition: all 0.3s ease;
+
+				@media screen and (max-width: 700px) {
+					flex: 1;
+					min-width: calc(100vw - 3rem);
+				}
 
         .text-cont {
           font-family: "Avenir", sans-serif;
@@ -46,6 +52,12 @@
     .subcategories-cont {
       display: flex;
       gap: 1rem;
+			overflow: auto;
+
+			@media screen and (max-width: 700px) {
+				gap: 0.25rem;
+				grid-auto-flow: column;
+			}
 
       button.subcategory-listing {
         background: transparent;
@@ -53,16 +65,11 @@
         display: flex;
         align-items: center;
         gap: 0;
+				position: relative;
 
-        .img-cont {
-          display: flex;
-          align-items: center;
-
-          img {
-            height: 39px;
-            transform: translateX(1.3px);
-          }
-        }
+				svg {
+					transform: scale(0.85) translateX(5px);
+				}
 
         .text-cont {
           background-color: #fb9400;
@@ -71,40 +78,6 @@
           font-family: "Avenir", sans-serif;
           font-weight: 500;
           font-size: 1.15rem;
-          line-height: 24px;
-        }
-      }
-    }
-
-    .subcategories-cont {
-      display: flex;
-      gap: 1rem;
-
-      button.subcategory-listing {
-        background: transparent;
-        border: none;
-        display: flex;
-        align-items: center;
-        gap: 0;
-
-        .img-cont {
-          display: flex;
-          align-items: center;
-
-          img {
-            height: 39px;
-            transform: translateX(1.3px);
-          }
-        }
-
-        .text-cont {
-          background-color: #fb9400;
-          padding: 0.5rem;
-          color: #ffffff;
-          font-family: "Avenir", sans-serif;
-          font-weight: 500;
-          font-size: 1.15rem;
-          line-height: 24px;
         }
       }
     }
@@ -113,11 +86,22 @@
 			display: flex;
 	    gap: 2rem;
 	    justify-content: space-between;
+			align-items: center;
+
+			@media screen and (max-width: 700px) {
+				gap: 1rem;
+			}
 
       .categories-selected-listing-cont {
 				display: flex;
 				grid-gap: 1rem;
 				gap: 1rem;
+				overflow: auto;
+
+				@media screen and (max-width: 700px) {
+					gap: 0.25rem;
+					grid-auto-flow: column;
+				}
 
         .subcategory-listing {
           background: transparent;
@@ -126,15 +110,9 @@
           align-items: center;
           gap: 0;
 
-          .img-cont {
-            display: flex;
-            align-items: center;
-
-            img {
-							height: 39.8px;
-              transform: translateX(1.3px);
-            }
-          }
+					svg {
+						transform: scale(0.85) translateX(5px);
+					}
 
           .text-cont {
             background-color: #fb9400;
@@ -143,7 +121,6 @@
             font-family: "Avenir", sans-serif;
             font-weight: 500;
             font-size: 1.15rem;
-            line-height: 24px;
           }
 
 					.remove-selected-subcategory-cont {
@@ -154,11 +131,15 @@
 						font-weight: 500;
 						font-size: 1.15rem;
 
-						.remove-selected-subcategory-btn {
-							padding: 0.08rem;
+						button.remove-selected-subcategory-btn {
 							background: none;
 							border: none;
 							color: #fff;
+							vertical-align: middle;
+
+							i {
+								padding: 0;
+							}
 						}
 					}
         }
@@ -173,6 +154,11 @@
 					border: 4px solid #FB9400;
 					box-sizing: border-box;
 					border-radius: 50px;
+
+					@media screen and (max-width: 700px) {
+						font-size: 1rem;
+						padding: 0.5rem 1rem;
+					}
 				}
 			}
     }
