renamed some scss files according to the correct nomenclature

--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -1,10 +1,10 @@
 // Dont write any SCSS here please migrate your styling to individual pages
 
 @import "login-signup" ;
-@import "recipe_content";
-@import "pagenotfound";
+@import "recipe-content";
+@import "page-not-found";
 @import "team";
-@import "recipeFilterSearch";
+@import "recipe-filter-search";
 @import "profile";
 
 
