--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -150,6 +150,8 @@
         align-items: center;
         border-right: 3px solid black;
 				padding: 0.5rem 1.5rem 0.5rem 0;
+				opacity: 0;
+				transition: opacity 0.3s ease;
 
 				li {
 					img {
@@ -158,6 +160,10 @@
 					}
 				}
       }
+
+			ul.active {
+				opacity: 1;
+			}
     }
   }
 
