--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -7,7 +7,7 @@
 @import "recipe-filter-search";
 @import "profile";
 @import "shopping-list";
-
+@import "search-results";
 
 img {
   max-width: 100%;
