--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -1,6 +1,6 @@
 // Dont write any SCSS here please migrate your styling to individual pages
 
-@import "login-signup" ;
+@import "login-signup";
 @import "recipe-content";
 @import "page-not-found";
 @import "team";
@@ -16,461 +16,463 @@ img {
 
 .app_footer {
   text-align: center;
-	background: #FFF8EF;
-	padding: 2rem;
+  background: #fff8ef;
+  padding: 2rem;
 
-	@media screen and (max-width: 700px) {
-		padding: 1rem;
-	}
+  @media screen and (max-width: 700px) {
+    padding: 1rem;
+  }
 
-	p {
-		font-family: "Avenir", sans-serif;
-		font-weight: 800;
-		font-size: 1rem;
-		color: #000000;
-	}
+  p {
+    font-family: "Avenir", sans-serif;
+    font-weight: 800;
+    font-size: 1rem;
+    color: #000000;
+  }
 }
 
 // homepage styling only
 .home_page,
 .search_page,
 .shoppinglist_page {
-
   .app_body {
     display: flex;
     flex-flow: column nowrap;
-		gap: 2rem;
+    gap: 2rem;
 
     button {
-			border-radius: 10px;
-			border: 1px solid black;
+      border-radius: 10px;
+      border: 1px solid black;
     }
 
     // start blindbox styling
     .blindbox-hero-cont {
-			padding: 2rem 6rem;
-			background: #FFF8EF;
+      padding: 2rem 6rem;
+      background: #fff8ef;
 
-			@media screen and (max-width: 700px) {
-				padding: 1rem;
-			}
+      @media screen and (max-width: 700px) {
+        padding: 1rem;
+      }
 
-			> * {
-				display: grid;
-				grid-template-columns: 1fr 1fr;
-				align-items: center;
-				gap: 2rem;
+      > * {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        gap: 2rem;
 
-				@media screen and (max-width: 700px) {
-					grid-template-columns: 1fr;
-				}
-			}
+        @media screen and (max-width: 700px) {
+          grid-template-columns: 1fr;
+        }
+      }
 
-			.blindbox-hero-text {
-				font-family: "Avenir", sans-serif;
-				font-size: 1.25rem;
-				color: #000000;
-				line-height: 1.4;
+      .blindbox-hero-text {
+        font-family: "Avenir", sans-serif;
+        font-size: 1.25rem;
+        color: #000000;
+        line-height: 1.4;
 
-				@media screen and (max-width: 700px) {
-					text-align: center;
+        @media screen and (max-width: 700px) {
+          text-align: center;
 
-					br {
-						display: none;
-					}
-				}
-			}
+          br {
+            display: none;
+          }
+        }
+      }
 
-			.blindbox-hero-image-btn {
-				display: flex;
-				flex-direction: column;
-				align-items: flex-end;
-				text-align: center;
-				gap: 0.5rem;
+      .blindbox-hero-image-btn {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        text-align: center;
+        gap: 0.5rem;
 
-				@media screen and (max-width: 700px) {
-					align-items: center;
-					flex-direction: row;
-					justify-content: center;
-				}
+        @media screen and (max-width: 700px) {
+          align-items: center;
+          flex-direction: row;
+          justify-content: center;
+        }
 
-				.blindbox-hero-image-cont {
-					img {
-						width: 10rem;
-					}
-				}
+        .blindbox-hero-image-cont {
+          img {
+            width: 10rem;
+          }
+        }
 
-				.blindbox-hero-btn-cont {
-					button.blindbox-hero-btn {
-						font-family: "Avenir", sans-serif;
-						font-size: 1.25rem;
-						padding: 0.5rem 1rem;
-						background: #FFF8EF;
-						border: 4px solid #FB9400;
-						box-sizing: border-box;
-						border-radius: 50px;
-					}
-				}
-			}
+        .blindbox-hero-btn-cont {
+          button.blindbox-hero-btn {
+            font-family: "Avenir", sans-serif;
+            font-size: 1.25rem;
+            padding: 0.5rem 1rem;
+            background: #fff8ef;
+            border: 4px solid #fb9400;
+            box-sizing: border-box;
+            border-radius: 50px;
+          }
+        }
+      }
     }
     // end blindbox
 
+    // featured recipes
+    .recipes-otd {
+      padding: 1rem;
 
-		// featured recipes
-		.recipes-otd {
-			padding: 1rem;
+      @media screen and (max-width: 700px) {
+        padding: 1rem;
+      }
 
-			@media screen and (max-width: 700px) {
-				padding: 1rem;
-			}
+      > * {
+        display: grid;
+        gap: 1rem;
+      }
 
-			> * {
-				display: grid;
-				gap: 1rem;
-			}
+      .heading {
+        h3 {
+          font-family: "Fontastique", cursive;
+          font-size: 2rem;
+          letter-spacing: 0.1em;
+          color: #000000;
+          text-align: center;
+        }
+      }
 
-			.heading {
-				h3 {
-					font-family: "Fontastique", cursive;
-					font-size: 2rem;
-					letter-spacing: 0.1em;
-					color: #000000;
-					text-align: center;
-				}
-			}
+      .subheading {
+        padding-bottom: 2rem;
 
-			.subheading {
-				padding-bottom: 2rem;
+        @media screen and (max-width: 700px) {
+          padding-bottom: 1rem;
+        }
 
-				@media screen and (max-width: 700px) {
-					padding-bottom: 1rem;
-				}
+        p {
+          font-family: "Avenir", sans-serif;
+          font-weight: 400;
+          font-size: 1.25rem;
+          color: #000000;
+          text-align: center;
+        }
+      }
 
-				p {
-					font-family: "Avenir", sans-serif;
-					font-weight: 400;
-					font-size: 1.25rem;
-					color: #000000;
-					text-align: center;
-				}
-			}
+      .recipes-otd-listing {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
 
-			.recipes-otd-listing {
-				display: grid;
-				grid-template-columns: repeat(3, 1fr);
-				gap: 1.5rem;
+        @media screen and (max-width: 700px) {
+          grid-template-columns: repeat(1, 1fr);
+        }
 
-				@media screen and (max-width: 700px) {
-					grid-template-columns: repeat(1, 1fr);
-				}
+        > div {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          border-radius: 30px 30px 0px 0px;
+          border: 2px solid #a9a9a9;
+          overflow: hidden;
 
-				> div {
-					display: flex;
-					flex-direction: column;
-					justify-content: space-between;
-					border-radius: 30px 30px 0px 0px;
-					border: 2px solid #A9A9A9;
-					overflow: hidden;
+          .recipes-otd-img-cont {
+            display: flex;
+            flex: 1 1 100%;
 
-					.recipes-otd-img-cont {
-						display: flex;
-						flex: 1 1 100%;
+            img {
+              width: 100%;
+              // border-radius: 30px 30px 0px 0px;
+            }
+          }
 
-						img {
-							width: 100%;
-							// border-radius: 30px 30px 0px 0px;
-						}
-					}
+          .recipes-otd-name-cont {
+            min-height: 70px;
+            padding: 0.5rem;
 
-					.recipes-otd-name-cont {
-						min-height: 70px;
-						padding: 0.5rem;
+            h4 {
+              font-family: "Fontastique", cursive;
+              font-size: 1.25rem;
+              color: #000000;
+            }
+          }
 
-						h4 {
-							font-family: "Fontastique", cursive;
-							font-size: 1.25rem;
-							color: #000000;
-						}
-					}
+          .recipes-otd-details-cont {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            padding: 0.5rem;
 
-					.recipes-otd-details-cont {
-						display: flex;
-						justify-content: space-between;
-						align-items: flex-end;
-						padding: 0.5rem;
+            .recipes-otd-category-cooking-time-cont {
+              p {
+                font-family: "Avenir", sans-serif;
+                font-weight: 500;
+                font-size: 1rem;
+                color: #000000;
+              }
+            }
 
-						.recipes-otd-category-cooking-time-cont {
-							p {
-								font-family: "Avenir", sans-serif;
-								font-weight: 500;
-								font-size: 1rem;
-								color: #000000;
-							}
-						}
+            .recipes-otd-likes-dislikes-cont {
+              display: flex;
+              gap: 0.75rem;
 
-						.recipes-otd-likes-dislikes-cont {
-							display: flex;
-							gap: 0.75rem;
+              > * {
+                display: flex;
+                gap: 0.125rem;
+              }
+            }
+          }
+        }
+      }
 
-							> * {
-								display: flex;
-								gap: 0.125rem;
-							}
-						}
-					}
-				}
-			}
+      .recipes-otd-load-more-btn-cont {
+        text-align: right;
 
-			.recipes-otd-load-more-btn-cont {
-				text-align: right;
+        @media screen and (max-width: 700px) {
+          text-align: center;
+        }
 
-				@media screen and (max-width: 700px) {
-					text-align: center;
-				}
-
-				button.recipes-otd-load-more-btn {
-					font-family: "Avenir", sans-serif;
-					font-size: 1.25rem;
-					padding: 0.5rem 1rem;
-					background: #FFF8EF;
-					border: 4px solid #FB9400;
-					box-sizing: border-box;
-					border-radius: 50px;
-				}
-			}
-		}
-		//end featured recipes
+        button.recipes-otd-load-more-btn {
+          font-family: "Avenir", sans-serif;
+          font-size: 1.25rem;
+          padding: 0.5rem 1rem;
+          background: #fff8ef;
+          border: 4px solid #fb9400;
+          box-sizing: border-box;
+          border-radius: 50px;
+        }
+      }
+    }
+    //end featured recipes
 
     // features styling
-		.features-cont {
-			padding: 3rem;
+    .features-cont {
+      padding: 3rem;
 
-			@media screen and (max-width: 700px) {
-				padding: 1rem;
-			}
+      @media screen and (max-width: 700px) {
+        padding: 1rem;
+      }
 
-			> * {
-				display: grid;
-				gap: 4rem;
-			}
+      > * {
+        display: grid;
+        gap: 4rem;
+      }
 
-			.heading {
-				h3 {
-					font-family: "Fontastique", cursive;
-					font-size: 2rem;
-					letter-spacing: 0.1em;
-					color: #000000;
-					text-align: center;
-				}
-			}
+      .heading {
+        h3 {
+          font-family: "Fontastique", cursive;
+          font-size: 2rem;
+          letter-spacing: 0.1em;
+          color: #000000;
+          text-align: center;
+        }
+      }
 
-			.features-listing {
-				display: grid;
-				gap: 8rem;
+      .features-listing {
+        display: grid;
+        gap: 9rem;
 
-				> div > div {
-					display: grid;
-					grid-template-columns: repeat(2, 1fr);
-					gap: 2rem;
+        > div > div {
+          display: grid;
+          grid-template-columns: repeat(2, 1fr);
+          gap: 2rem;
 
-					@media screen and (max-width: 700px) {
-						grid-template-columns: repeat(1, 1fr);
-					}
+          @media screen and (max-width: 700px) {
+            grid-template-columns: repeat(1, 1fr);
+          }
 
-					.features-listing-image {
-						text-align: right;
+          .features-listing-image {
+            text-align: right;
 
-						@media screen and (max-width: 700px) {
-							text-align: center;
-						}
-					}
+            @media screen and (max-width: 700px) {
+              text-align: center;
+            }
+          }
 
-					.features-listing-text-cont {
-						display: flex;
-						flex-direction: column;
-						justify-content: center;
-						gap: 1rem;
+          .features-listing-text-cont {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 1rem;
 
-						@media screen and (max-width: 700px) {
-							text-align: center;
-							align-items: center;
-						}
+            @media screen and (max-width: 700px) {
+              text-align: center;
+              align-items: center;
+            }
 
-						.title {
-							font-family: "Fontastique", cursive;
-							font-size: 1.5rem;
-							color: #000000;
+            .title {
+              font-family: "Fontastique", cursive;
+              font-size: 1.75rem;
+              color: #000000;
 
-							@media screen and (max-width: 700px) {
-								text-align: center;
-							}
-						}
+              @media screen and (max-width: 700px) {
+                text-align: center;
+              }
+            }
 
-						.desciption {
-							font-family: "Avenir", sans-serif;
-							font-size: 1.25rem;
-							line-height: 1.5;
-							color: #000000;
+            .desciption {
+              font-family: "Avenir", sans-serif;
+              font-size: 1.25rem;
+              line-height: 1.5;
+              color: #000000;
 
-							@media screen and (max-width: 700px) {
-								text-align: center;
-							}
-						}
+              @media screen and (max-width: 700px) {
+                text-align: center;
+              }
+            }
 
-						.btn-cont {
-							button {
-								font-family: "Avenir", sans-serif;
-								font-size: 1.25rem;
-								padding: 0.5rem 1rem;
-								background: #FFF8EF;
-								border: 4px solid #FB9400;
-								box-sizing: border-box;
-								border-radius: 50px;
-							}
-						}
-					}
-				}
+            .btn-cont {
+              button {
+                font-family: "Avenir", sans-serif;
+                font-size: 1.25rem;
+                padding: 0.5rem 1rem;
+                background: #fff8ef;
+                border: 4px solid #fb9400;
+                box-sizing: border-box;
+                border-radius: 50px;
+              }
+            }
+          }
+        }
 
-				> div:nth-of-type(2) > div {
-					.features-listing-image {
-						text-align: left;
+        > div:nth-of-type(2) > div {
+          .features-listing-image {
+            text-align: left;
 
-						@media screen and (max-width: 700px) {
-							text-align: center;
-						}
-					}
+            @media screen and (max-width: 700px) {
+              text-align: center;
+            }
+          }
 
-					.features-listing-text-cont {
-						align-items: flex-end;
+          .features-listing-text-cont {
+            align-items: flex-end;
 
-						@media screen and (max-width: 700px) {
-							align-items: center;
-						}
+            @media screen and (max-width: 700px) {
+              align-items: center;
+            }
 
-						.desciption {
-							text-align: right;
+            .desciption {
+              text-align: right;
 
-							@media screen and (max-width: 700px) {
-								text-align: center;
-							}
-						}
-					}
-				}
+              @media screen and (max-width: 700px) {
+                text-align: center;
+              }
+            }
+          }
+        }
 
-				@media screen and (max-width: 700px) {
-					> div:not(:nth-of-type(2)) > div {
-						.features-listing-image {
-							order: -1;
-						}
-					}
-				}
-			}
-		}
+        @media screen and (max-width: 700px) {
+          > div:not(:nth-of-type(2)) > div {
+            .features-listing-image {
+              order: -1;
+            }
+          }
+        }
+      }
+    }
     // end features styling
 
     // contact form styling
     .homepage-contact-form {
-			padding: 6rem 4rem;
+      padding: 6rem 4rem;
 
-			@media screen and (max-width: 700px) {
-				padding: 1rem;
-			}
+      @media screen and (max-width: 700px) {
+        padding: 1rem;
+      }
 
-			> * {
-				display: grid;
-				gap: 2rem;
-				// justify-content: center;
+      > * {
+        display: grid;
+        gap: 2rem;
+        // justify-content: center;
 
-				@media screen and (max-width: 700px) {
-					gap: 1rem;
-				}
-			}
+        @media screen and (max-width: 700px) {
+          gap: 1rem;
+        }
+      }
 
-			.heading {
-				h3 {
-					font-family: "Fontastique", cursive;
-					font-size: 2rem;
-					letter-spacing: 0.1em;
-					color: #000000;
-					text-align: center;
-				}
-			}
+      .heading {
+        h3 {
+          font-family: "Fontastique", cursive;
+          font-size: 2rem;
+          letter-spacing: 0.1em;
+          color: #000000;
+          text-align: center;
+        }
+      }
 
-			.subheading {
-				p {
-					font-family: "Avenir", sans-serif;
-					font-weight: 500;
-					font-size: 1.25rem;
-					color: #000000;
-					text-align: center;
-				}
-			}
+      .subheading {
+        p {
+          font-family: "Avenir", sans-serif;
+          font-weight: 500;
+          font-size: 1.25rem;
+          color: #000000;
+          text-align: center;
+        }
+      }
 
-			.form {
-				background: #FFF8EF;
-				border-radius: 24px;
-				padding: 4rem 4rem 1.5rem 4rem;
-				text-align: center;
-				max-width: 650px;
-				margin: 0 auto;
+      .form {
+        background: #fff8ef;
+        border-radius: 24px;
+        padding: 4rem;
+        text-align: center;
+        max-width: 100%;
+        width: 100%;
+        margin: 0 auto;
 
-				@media screen and (max-width: 700px) {
-					padding: 2rem 2rem 1rem 2rem;
-					max-width: 100%;
-					margin: 0;
-				}
+        @media screen and (max-width: 700px) {
+          padding: 2rem 2rem 1rem 2rem;
+          max-width: 100%;
+          margin: 0;
+        }
 
-				.input-group {
-					display: grid;
-					grid-template-columns: repeat(2, 1fr);
-					gap: 1.5rem;
+        form {
+          width: 60%;
+          margin: auto;
 
 					@media screen and (max-width: 700px) {
-						grid-template-columns: repeat(1, 1fr);
-					}
-
-					input {
-						padding: 0.5rem;
-						border-radius: 0;
-						border: 2px solid #A9A9A9;
-						font-family: "Roboto", sans-serif;
-						font-size: 1.25rem;
-						color: #000000;
 						width: 100%;
 					}
 
-					input:nth-of-type(1) {
-						grid-column: 1 / -1;
-					}
+          .input-group {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1.5rem;
 
-					textarea {
-						padding: 0.5rem;
-						border-radius: 0;
-						border: 2px solid #A9A9A9;
-						font-family: "Roboto", sans-serif;
-						font-size: 1.25rem;
-						color: #000000;
-						grid-column: 1 / -1;
-						resize: vertical;
-						width: 100%;
-					}
+            @media screen and (max-width: 700px) {
+              grid-template-columns: repeat(1, 1fr);
+            }
 
-					input::placeholder, textarea::placeholder {
-						color: #000;
-					}
-				}
+            input, textarea {
+              padding: 1rem;
+              border-radius: 0;
+              border: 2px solid #a9a9a9;
+              font-family: "Roboto", sans-serif;
+              font-size: 1.25rem;
+              color: #000000;
+              width: 100%;
+            }
 
-				button[type=submit] {
-					font-family: "Avenir", sans-serif;
-					font-size: 1.25rem;
-					padding: 0.5rem 1rem;
-					background: #FFF8EF;
-					border: 4px solid #FB9400;
-					box-sizing: border-box;
-					border-radius: 50px;
-					margin-top: 2rem;
-				}
-			}
+            input:nth-of-type(1) {
+              grid-column: 1 / -1;
+            }
+
+            textarea {
+              grid-column: 1 / -1;
+              resize: vertical;
+            }
+
+            input::placeholder,
+            textarea::placeholder {
+              color: #000;
+            }
+          }
+
+          button[type="submit"] {
+            font-family: "Avenir", sans-serif;
+            font-size: 1.25rem;
+            padding: 0.5rem 1rem;
+            background: #fff8ef;
+            border: 4px solid #fb9400;
+            box-sizing: border-box;
+            border-radius: 50px;
+            margin-top: 2rem;
+          }
+        }
+      }
     }
     //  end Contact form
   }
@@ -479,6 +481,7 @@ img {
 
 /* width limiter */
 .max-width-cont {
-	max-width: 1000px;
-	margin: 0 auto;
+  max-width: 1000px;
+  margin: 0 auto;
 }
+/* width limiter end */
