--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -169,6 +169,7 @@ img {
           border-radius: 30px 30px 0px 0px;
           border: 2px solid #a9a9a9;
           overflow: hidden;
+					cursor: pointer;
 
           .recipes-otd-img-cont {
             display: flex;
