--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -167,8 +167,8 @@ img {
           flex-direction: column;
           justify-content: space-between;
           border-radius: 30px 30px 0px 0px;
-          border: 2px solid #a9a9a9;
-          overflow: hidden;
+					background: #A9A9A9;
+					padding: 2px;
 					cursor: pointer;
 
           .recipes-otd-img-cont {
@@ -177,13 +177,15 @@ img {
 
             img {
               width: 100%;
-              // border-radius: 30px 30px 0px 0px;
+							border-radius: 30px 30px 0px 0px;
             }
           }
 
           .recipes-otd-name-cont {
             min-height: 70px;
             padding: 0.5rem;
+						background: #fff;
+						transition: background 0.1s ease;
 
             h4 {
               font-family: "Fontastique", cursive;
@@ -197,6 +199,8 @@ img {
             justify-content: space-between;
             align-items: flex-end;
             padding: 0.5rem;
+						background: #fff;
+						transition: background 0.1s ease;
 
             .recipes-otd-category-cooking-time-cont {
               p {
@@ -218,6 +222,15 @@ img {
             }
           }
         }
+
+				> div:hover {
+          .recipes-otd-name-cont {
+						background: #FFF8EF;
+					}
+          .recipes-otd-details-cont {
+						background: #FFF8EF;
+					}
+				}
       }
 
       .recipes-otd-load-more-btn-cont {
