--- a/src/sass/page-specific/_profile.scss
+++ b/src/sass/page-specific/_profile.scss
@@ -137,8 +137,9 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            border: 2px solid #a9a9a9;
             border-radius: 30px 30px 0px 0px;
+						background: #A9A9A9;
+						padding: 2px;
 						cursor: pointer;
 
             .recipes-otd-img-cont {
@@ -154,6 +155,8 @@
             .recipes-otd-name-cont {
               min-height: 70px;
               padding: 0.5rem;
+							background: #fff;
+							transition: background 0.1s ease;
 
               h4 {
                 font-family: "Fontastique", cursive;
@@ -167,6 +170,8 @@
               justify-content: space-between;
               align-items: flex-end;
               padding: 0.5rem;
+							background: #fff;
+							transition: background 0.1s ease;
 
               .recipes-otd-category-cooking-time-cont {
                 p {
@@ -188,6 +193,15 @@
               }
             }
           }
+
+					> div:nth-of-type(1):hover {
+						.recipes-otd-name-cont {
+							background: #FFF8EF;
+						}
+						.recipes-otd-details-cont {
+							background: #FFF8EF;
+						}
+					}
 
           .recipe-card-overlay {
 						opacity: 0;
