--- a/src/sass/page-specific/_search-results.scss
+++ b/src/sass/page-specific/_search-results.scss
@@ -34,8 +34,8 @@
 				flex-direction: column;
 				justify-content: space-between;
 				border-radius: 30px 30px 0px 0px;
-				border: 2px solid #A9A9A9;
-				overflow: hidden;
+				background: #A9A9A9;
+				padding: 2px;
 				cursor: pointer;
 
 				.recipes-otd-img-cont {
@@ -44,13 +44,15 @@
 
 					img {
 						width: 100%;
-						// border-radius: 30px 30px 0px 0px;
+						border-radius: 30px 30px 0px 0px;
 					}
 				}
 
 				.recipes-otd-name-cont {
 					min-height: 70px;
 					padding: 0.5rem;
+					background: #fff;
+					transition: background 0.1s ease;
 
 					h4 {
 						font-family: "Fontastique", cursive;
@@ -64,6 +66,8 @@
 					justify-content: space-between;
 					align-items: flex-end;
 					padding: 0.5rem;
+					background: #fff;
+					transition: background 0.1s ease;
 
 					.recipes-otd-category-cooking-time-cont {
 						p {
@@ -83,6 +87,15 @@
 							gap: 0.125rem;
 						}
 					}
+				}
+			}
+
+			> div:hover {
+				.recipes-otd-name-cont {
+					background: #FFF8EF;
+				}
+				.recipes-otd-details-cont {
+					background: #FFF8EF;
 				}
 			}
 		}
