--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -164,12 +164,13 @@ img {
 
         > div {
           display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          border-radius: 30px 30px 0px 0px;
-					background: #A9A9A9;
-					padding: 2px;
+					flex-direction: column;
+					justify-content: space-between;
+					border-radius: 30px 30px 0px 0px;
+					/* background: #A9A9A9; */
+					/* padding: 2px; */
 					cursor: pointer;
+					box-shadow: 0px 0px 0px 2px #a9a9a9;
 
           .recipes-otd-img-cont {
             display: flex;
