--- a/src/sass/page-specific/_profile.scss
+++ b/src/sass/page-specific/_profile.scss
@@ -134,13 +134,14 @@
 					position: relative;
 
           > div:nth-of-type(1) {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            border-radius: 30px 30px 0px 0px;
-						background: #A9A9A9;
-						padding: 2px;
+						display: flex;
+						flex-direction: column;
+						justify-content: space-between;
+						border-radius: 30px 30px 0px 0px;
+						/* background: #A9A9A9; */
+						/* padding: 2px; */
 						cursor: pointer;
+						box-shadow: 0px 0px 0px 2px #a9a9a9;
 
             .recipes-otd-img-cont {
               display: flex;
