--- a/src/sass/page-specific/_search-results.scss
+++ b/src/sass/page-specific/_search-results.scss
@@ -34,9 +34,10 @@
 				flex-direction: column;
 				justify-content: space-between;
 				border-radius: 30px 30px 0px 0px;
-				background: #A9A9A9;
-				padding: 2px;
+				/* background: #A9A9A9; */
+				/* padding: 2px; */
 				cursor: pointer;
+				box-shadow: 0px 0px 0px 2px #a9a9a9;
 
 				.recipes-otd-img-cont {
 					display: flex;
