--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,7 +1,7 @@
 .app_header {
 	padding: 0.25rem 0.5rem 0rem 0.5rem;
-	background: #FFF8EF;
-	border-bottom: 4px solid #FB9400;
+	background: #fff;
+	border-bottom: 2px solid #FB9400;
 	box-shadow: 0px 2px 2px #FB9400;
 	display: flex;
 	flex-flow: row nowrap;
@@ -17,9 +17,13 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
-    gap: 1.5rem;
+    gap: 2.5rem;
 		margin: 0;
 		padding: 0;
+
+		@media screen and (max-width: 900px) {
+			gap: 1.5rem;
+		}
 
     li {
       list-style-type: none;
@@ -28,7 +32,7 @@
 			a {
 				font-family: "Avenir", sans-serif;
 				font-weight: 800;
-				font-size: 1rem;
+				font-size: 1.25rem;
 				color: #000000;
 				text-decoration: none;
 			}
@@ -115,7 +119,7 @@
   }
 
 	.search.active {
-    background-color: #fff;
+    background-color: #fff8ef;
     border-radius: 20px;
 
 		.search-btn {
@@ -126,6 +130,12 @@
 
 			svg {
 				width: 1rem;
+			}
+
+			.svg-1 {
+				path {
+					fill: #fff;
+				}
 			}
 		}
 
