--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -79,7 +79,7 @@ img {
       .blindbox-hero-image-btn {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
         text-align: center;
         gap: 0.5rem;
 
