post presentation fixes, check github issues for details

--- a/src/sass/page-specific/_recipe-filter-search.scss
+++ b/src/sass/page-specific/_recipe-filter-search.scss
@@ -11,14 +11,16 @@
     }
 
     .categories-cont {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
+			display: flex;
+			flex-wrap: wrap;
       gap: 1.5rem;
+			justify-content: center;
 
       @media screen and (max-width: 700px) {
-        display: flex;
         overflow: auto;
+				flex-wrap: nowrap;
 				gap: .5rem;
+				justify-content: start;
       }
 
       button.category-listing {
@@ -34,11 +36,13 @@
         justify-content: space-between;
         align-items: center;
         gap: 0.5rem;
+				width: calc(33% - 1rem);
 
         @media screen and (max-width: 700px) {
           flex: 1;
           min-width: calc(46vw - 3rem);
 					border: 5px solid #cfcdcd;
+					width: 100%;
         }
 
         .img-cont {
@@ -278,6 +282,7 @@
             padding: 0.5rem;
             background: #fff;
             transition: background 0.1s ease;
+						letter-spacing: 1px;
 
             h4 {
               font-family: "Fontastique", cursive;
@@ -299,6 +304,9 @@
             transition: background 0.1s ease;
 
             .recipes-otd-category-cooking-time-cont {
+							display: grid;
+							gap: 0.25rem;
+
               p {
                 font-family: "Avenir", sans-serif;
                 font-weight: 500;
@@ -318,6 +326,14 @@
               > * {
                 display: flex;
                 gap: 0.125rem;
+								align-items: flex-end;
+
+								.recipes-otds-likes, .recipes-otd-likes {
+									font-family: "Avenir", sans-serif;
+									font-weight: 500;
+									font-size: 0.75rem;
+									color: #000000;
+								}
               }
             }
           }
