--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -182,6 +182,7 @@ img {
             padding: 0.5rem;
 						background: #fff;
 						transition: background 0.1s ease;
+						letter-spacing: 1px;
 
             h4 {
               font-family: "Fontastique", cursive;
@@ -199,6 +200,9 @@ img {
 						transition: background 0.1s ease;
 
             .recipes-otd-category-cooking-time-cont {
+							display: grid;
+							gap: 0.25rem;
+
               p {
                 font-family: "Avenir", sans-serif;
                 font-weight: 500;
@@ -214,6 +218,14 @@ img {
               > * {
                 display: flex;
                 gap: 0.125rem;
+								align-items: flex-end;
+
+								.recipes-otds-likes, .recipes-otd-likes {
+									font-family: "Avenir", sans-serif;
+									font-weight: 500;
+									font-size: 0.75rem;
+									color: #000000;
+								}
               }
             }
           }
@@ -491,7 +503,7 @@ img {
 
 /* width limiter */
 .max-width-cont {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 /* width limiter end */
