--- a/src/sass/page-specific/_profile.scss
+++ b/src/sass/page-specific/_profile.scss
@@ -158,6 +158,7 @@
               padding: 0.5rem;
 							background: #fff;
 							transition: background 0.1s ease;
+							letter-spacing: 1px;
 
               h4 {
                 font-family: "Fontastique", cursive;
@@ -175,6 +176,9 @@
 							transition: background 0.1s ease;
 
               .recipes-otd-category-cooking-time-cont {
+								display: grid;
+								gap: 0.25rem;
+	
                 p {
                   font-family: "Avenir", sans-serif;
                   font-weight: 500;
@@ -190,6 +194,14 @@
                 > * {
                   display: flex;
                   gap: 0.125rem;
+									align-items: flex-end;
+
+									.recipes-otds-likes, .recipes-otd-likes {
+										font-family: "Avenir", sans-serif;
+										font-weight: 500;
+										font-size: 0.75rem;
+										color: #000000;
+									}
                 }
               }
             }
