--- a/src/sass/page-specific/_shopping-list.scss
+++ b/src/sass/page-specific/_shopping-list.scss
@@ -154,7 +154,7 @@
 		}
 
 		.grocery-shop-cont {
-			padding: 4rem 2rem;
+			padding: 4rem 0rem;
 			display: grid;
 			gap: 2rem;
 
@@ -167,6 +167,11 @@
 			.search-container {
 				display: flex;
 				justify-content: space-between;
+
+				@media screen and (max-width: 700px) {
+					flex-direction: column;
+					gap: 1rem;
+				}
 
 				input {
 					padding: 0.5rem;
@@ -189,9 +194,14 @@
 			}
 
 			.map-cont {
-				background-color: #A9A9A9;
-				width: 100%;
-				height: 300px;
+				padding: 4rem 0 0 0;
+				display: flex;
+				justify-content: center;
+
+				img {
+					display: block;
+					width: 60%;
+				}
 			}
 		}
 	}
