--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,40 +1,45 @@
 .app_header {
-	padding: 0.25rem 0.5rem 0rem 0.5rem;
-	background: #fff;
-	border-bottom: 2px solid #FB9400;
-	box-shadow: 0px 2px 2px #FB9400;
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
-	justify-content: space-between;
-	z-index: 2;
+  padding: 0.25rem 0.5rem 0rem 0.5rem;
+  background: #fff;
+  border-bottom: 2px solid #fb9400;
+  box-shadow: 0px 2px 2px #fb9400;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 2;
 
-	@media screen and (max-width: 700px) {
-		padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-	}
+  @media screen and (max-width: 700px) {
+    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+  }
 
   nav ul {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
     gap: 2.5rem;
-		margin: 0;
-		padding: 0;
+    margin: 0;
+    padding: 0;
 
-		@media screen and (max-width: 900px) {
-			gap: 1.5rem;
-		}
+    @media screen and (max-width: 900px) {
+      gap: 1.5rem;
+    }
 
     li {
       list-style-type: none;
-			align-self: center;
+      align-self: center;
 
-			a {
-				font-family: "Avenir", sans-serif;
-				font-weight: 800;
-				font-size: 1.25rem;
-				color: #000000;
-				text-decoration: none;
+      a {
+        font-family: "Avenir", sans-serif;
+        font-weight: 800;
+        font-size: 1.25rem;
+        color: #000000;
+        text-decoration: none;
+				transition: 0.1s all ease;
+      }
+
+			a.active {
+				color: #FB9400;
 			}
     }
   }
@@ -47,203 +52,208 @@
 
   .logo {
     display: grid;
-		align-self: center;
-		padding-left: 0.25rem;
+    align-self: center;
+    padding-left: 0.25rem;
 
-		a {
-			img.desktop-header-logo {
-				display: block;
-				width: 14rem;
-			}
-			img.mobile-header-logo {
-				display: none;
-				width: 2.5rem;
-			}
+    a {
+      img.desktop-header-logo {
+        display: block;
+        width: 14rem;
+      }
+      img.mobile-header-logo {
+        display: none;
+        width: 2.5rem;
+      }
 
-			@media screen and (max-width: 700px) {
-				img.desktop-header-logo {
-					display: none;
-				}
-				img.mobile-header-logo {
-					display: block;
-				}
-			}
-		}
+      @media screen and (max-width: 700px) {
+        img.desktop-header-logo {
+          display: none;
+        }
+        img.mobile-header-logo {
+          display: block;
+        }
+      }
+    }
   }
 
   .search {
-		display: flex;
-		margin-right: 0.75rem;
-		transition: all 0.3s ease;
+    display: flex;
+    margin-right: 0.75rem;
+    transition: all 0.3s ease;
 
-		.search-btn {
-			background-color: transparent;
-			border: none;
-			padding: 0;
-			cursor: pointer;
-			transition: all 0.3s ease;
+    .search-btn {
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      cursor: pointer;
+      transition: all 0.3s ease;
 
-			svg {
-				width: 1.5rem;
-				vertical-align: middle;
-				transition: all 0.3s ease;
-			}
+      svg {
+        width: 1.5rem;
+        vertical-align: middle;
+        transition: all 0.3s ease;
+      }
 
-			.svg-1 {
-				display: block;
-			}
+      .svg-1 {
+        display: block;
+      }
 
-			.svg-2 {
-				display: none;
-				transform: scale(1.3);
-			}
+      .svg-2 {
+        display: none;
+        transform: scale(1.3);
+      }
 
-			@media screen and (max-width: 700px) {
-				.svg-1 {
-					display: none;
-				}
+      @media screen and (max-width: 700px) {
+        .svg-1 {
+          display: none;
+        }
 
-				.svg-2 {
-					display: block;
-				}
-			}
-		}
+        .svg-2 {
+          display: block;
+        }
+      }
+    }
 
     input {
-			background-color: transparent;
-			border: none;
-			width: 0;
+      background-color: transparent;
+      border: none;
+      width: 0;
+      transition: all 0.3s ease;
+			font-size: 1.25rem;
 			padding: 0;
-			transition: all 0.3s ease;
+			font-family: "Avenir", sans-serif;
     }
   }
 
-	.search.active {
+  .search.active {
     background-color: #fff8ef;
     border-radius: 20px;
 
-		.search-btn {
-			padding: 0.5rem 0.53rem;
-			background: #FB9400;
-			border-radius: 50%;
-			color: #fff;
+    .search-btn {
+      padding: 0.5rem 0.95rem;
+      background: #fb9400;
+      border-radius: 50%;
+      color: #fff;
 
-			svg {
-				width: 1rem;
-			}
+      svg {
+        width: 1rem;
+      }
 
-			.svg-1 {
-				path {
-					fill: #fff;
-				}
-			}
-		}
-
-		input {
-			width: 15rem;
-    	padding: 0.5rem;
-		}
-	}
-
-  .desktop-nav-cont {
-		display: block;
-
-    @media screen and (max-width: 700px) {
-			display: none;
+      .svg-1 {
+        path {
+          fill: #fff;
+        }
+      }
     }
 
-    .desktop-nav{
+    input {
+      width: 20rem;
+			padding: 0.75rem;
+    }
+  }
+
+  .desktop-nav-cont {
+    display: block;
+
+    @media screen and (max-width: 700px) {
+      display: none;
+    }
+
+    .desktop-nav {
       display: flex;
       align-items: center;
-			gap: 1.2rem;
+      gap: 1.2rem;
 
       ul {
         align-items: center;
         border-right: 3px solid black;
-				padding: 0.5rem 1.5rem 0.5rem 0;
-				opacity: 0;
-				transition: opacity 0.3s ease;
+        padding: 0.5rem 1.5rem 0.5rem 0;
+        opacity: 0;
+        transition: opacity 0.3s ease;
 
-				li {
-					img {
-						width: 1.8rem;
-    				vertical-align: middle;
+        li {
+					a.active {
+
 					}
-				}
+          img {
+            width: 1.8rem;
+            vertical-align: middle;
+          }
+        }
       }
 
-			ul.active {
-				opacity: 1;
-			}
+      ul.active {
+        opacity: 1;
+      }
     }
   }
 
   .mobile-nav-cont {
-		display: none;
+    display: none;
     align-items: center;
-		gap: 1.2rem;
+    gap: 1.2rem;
 
     .mobile-nav {
-			transform: translateX(100%);
-			transition: all 0.3s ease;
-			position: fixed;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			top: 0;
-			background-color: #fff;
-			z-index: 1;
-			height: 100vh;
-			width: 100vw;
-			padding: 2rem;
-			overflow: auto;
+      transform: translateX(100%);
+      transition: all 0.3s ease;
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      top: 0;
+      background-color: #fff;
+      z-index: 1;
+      height: 100vh;
+      width: 100vw;
+      padding: 2rem;
+      overflow: auto;
 
-			ul {
-				display: grid;
-				gap: 2rem;
-				text-align: center;
+      ul {
+        display: grid;
+        gap: 2rem;
+        text-align: center;
 
-				li {
-					img {
-						max-width: 6rem;
-					}
+        li {
+          img {
+            max-width: 6rem;
+          }
 
-					a {
-						font-size: 2rem;
-					}
-				}
-			}
+          a {
+            font-size: 2rem;
+          }
+        }
+      }
 
-			.mobile-nav-close-btn-cont {
-				position: absolute;
-				top: 1rem;
-				right: 1rem;
+      .mobile-nav-close-btn-cont {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
 
-				button {
-					font-size: 2rem;
-					background-color: transparent;
-					border: none;
-					padding: 0;
-					display: flex;
-				}
-			}
+        button {
+          font-size: 2rem;
+          background-color: transparent;
+          border: none;
+          padding: 0;
+          display: flex;
+        }
+      }
     }
 
-		.mobile-nav.active {
-			transform: translateX(0);
-		}
+    .mobile-nav.active {
+      transform: translateX(0);
+    }
 
     @media screen and (max-width: 700px) {
-			display: flex;
+      display: flex;
     }
 
-		.mobile-nav-toggle-btn-cont {
-			button {
-				background-color: transparent;
-				border: none;
-				padding: 0;
-				display: flex;
-			}
-		}
+    .mobile-nav-toggle-btn-cont {
+      button {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        display: flex;
+      }
+    }
   }
 }
