--- a/src/sass/page-specific/_profile.scss
+++ b/src/sass/page-specific/_profile.scss
@@ -1,6 +1,6 @@
 .profile-cont {
   > * {
-    padding: 2rem 0;
+    padding: 2rem;
 
 		@media screen and (max-width: 700px) {
 			padding: 2rem 1rem;
@@ -11,7 +11,6 @@
       gap: 3rem;
       justify-content: space-evenly;
       align-items: center;
-      padding: 2rem;
 
 			@media screen and (max-width: 700px) {
 				display: grid;
@@ -327,6 +326,12 @@
 							gap: 1rem;
 							justify-content: flex-start;
 							padding: 0.25rem 0;
+
+							.checkbox {
+								display: flex;
+								align-items: center;
+								justify-content: center;
+							}
 						}
 					}
 				}
