--- a/src/sass/page-specific/_recipe-filter-search.scss
+++ b/src/sass/page-specific/_recipe-filter-search.scss
@@ -15,6 +15,7 @@
 			flex-wrap: wrap;
       gap: 1.5rem;
 			justify-content: center;
+			padding: 2rem 0;
 
       @media screen and (max-width: 700px) {
         overflow: auto;
@@ -40,7 +41,7 @@
 
         @media screen and (max-width: 700px) {
           flex: 1;
-          min-width: calc(46vw - 3rem);
+          min-width: calc(46vw - 2rem);
 					border: 5px solid #cfcdcd;
 					width: 100%;
         }
@@ -80,7 +81,12 @@
 
       button.category-listing:active, button.category-listing.active {
         background: #fff8ef;
-        border: 10px solid #fb9400;
+
+        @media screen and (max-width: 700px) {
+					border: 5px solid #fb9400;
+					transform: scale(1.1);
+					margin: 0 2%;
+        }
 
         .img-cont {
           img {
