--- a/src/sass/page-specific/_shopping-list.scss
+++ b/src/sass/page-specific/_shopping-list.scss
@@ -139,6 +139,12 @@
 							gap: 1rem;
 							justify-content: flex-start;
 							padding: 0.125rem 0;
+
+							.checkbox {
+								display: flex;
+								align-items: center;
+								justify-content: center;
+							}
 						}
 					}
 				}
