--- a/src/sass/page-specific/_team.scss
+++ b/src/sass/page-specific/_team.scss
@@ -13,7 +13,7 @@
 
 	.heading {
 		h1 {
-			font-family: "Avenir", sans-serif;
+			font-family: "Fontastique", cursive;
 			font-size: 3rem;
 			letter-spacing: 0.1em;
 			color: #000000;
